[project]
name = "env-manager"
version = "0.1.0"
description = "A CLI tool for managing .env files across multiple projects using AWS Systems Manager Parameter Store"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "s-kisaragi" },
]
keywords = ["aws", "env", "environment", "parameter-store", "ssm", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "boto3>=1.38.3",
    "click>=8.1.8",
]

[dependency-groups]
dev = [
    "nuitka>=2.7",
]

[project.scripts]
env-manager = "env_manager:cli"
